Added new security graphic

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 <script>
 function addBug() {
 	console.log(234234);
-	document.getElementById("menu").innerHTML = document.getElementById("menu").innerHTML + '<div id="divSecurityBug" style="background-color:white;position:absolute;bottom:0px;left:0px;"><img src="images/logos/intel-security-logo.png" style="width:256px;" /></div>';
+	document.getElementById("menu").innerHTML = document.getElementById("menu").innerHTML + '<div id="divSecurityBug" style="background-color:black;position:absolute;bottom:0px;left:0px;"><img src="images/logos/security logo.jpg" style="width:256px;" /></div>';
 
 }
 
